add antenna detector and power

--- a/Tools/HDF5_plot.ipynb
+++ b/Tools/HDF5_plot.ipynb
@@ -37,6 +37,9 @@
       "B0y : <class 'h5py._hl.dataset.Dataset'>\n",
       "B0z : <class 'h5py._hl.dataset.Dataset'>\n",
       "config : <class 'h5py._hl.group.Group'>\n",
+      "detAnt_01 : <class 'h5py._hl.group.Group'>\n",
+      "detAnt_02 : <class 'h5py._hl.group.Group'>\n",
+      "detAnt_03 : <class 'h5py._hl.group.Group'>\n",
       "n_e : <class 'h5py._hl.dataset.Dataset'>\n"
      ]
     }
@@ -57,23 +60,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N_x : <class 'h5py._hl.dataset.Dataset'>\n",
-      "N_y : <class 'h5py._hl.dataset.Dataset'>\n",
-      "N_z : <class 'h5py._hl.dataset.Dataset'>\n",
-      "ant_w0x : <class 'h5py._hl.dataset.Dataset'>\n",
-      "ant_w0y : <class 'h5py._hl.dataset.Dataset'>\n",
-      "ant_x : <class 'h5py._hl.dataset.Dataset'>\n",
-      "ant_y : <class 'h5py._hl.dataset.Dataset'>\n",
-      "ant_z : <class 'h5py._hl.dataset.Dataset'>\n",
-      "d_absorb : <class 'h5py._hl.dataset.Dataset'>\n",
-      "period : <class 'h5py._hl.dataset.Dataset'>\n",
-      "z2waist : <class 'h5py._hl.dataset.Dataset'>\n"
+      "detAnt_ypos : <class 'h5py._hl.dataset.Dataset'>\n",
+      "detAnt_zpos : <class 'h5py._hl.dataset.Dataset'>\n",
+      "i : <class 'h5py._hl.dataset.Dataset'>\n",
+      "rms_E : <class 'h5py._hl.dataset.Dataset'>\n",
+      "sum_EE : <class 'h5py._hl.dataset.Dataset'>\n",
+      "sum_ExEx : <class 'h5py._hl.dataset.Dataset'>\n",
+      "sum_EyEy : <class 'h5py._hl.dataset.Dataset'>\n",
+      "sum_EzEz : <class 'h5py._hl.dataset.Dataset'>\n"
      ]
     }
    ],
    "source": [
-    "for key in f[\"config\"].keys():\n",
-    "    print(key, \":\",type(f[\"config\"][key])) #Names of the root level object names in HDF5 file - can be groups or datasets."
+    "for key in f[\"detAnt_01\"].keys():\n",
+    "    print(key, \":\",type(f[\"detAnt_01\"][key])) #Names of the root level object names in HDF5 file - can be groups or datasets."
    ]
   },
   {
@@ -105,9 +105,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (150, 150, 200)\n",
+      "Shape: (50, 50, 100)\n",
       "Data Type (dtype): float64\n",
-      "Size: 4500000\n"
+      "Size: 250000\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
     "    y=Y.flatten(),                 # Y-coordinates\n",
     "    z=Z.flatten(),                 # Z-coordinates\n",
     "    value = density.flatten(),     # Flattened volume data\n",
-    "    isomin=0.2,                    # Minimum value to display\n",
+    "    isomin=0.01,                    # Minimum value to display\n",
     "    isomax=np.max(density),        # Maximum value to display\n",
     "    opacity=0.2,                   # Adjust opacity (between 0 and 1) for better visualization\n",
     "    surface_count=10,              # Number of volume surfaces to display\n",
@@ -200,9 +200,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (150, 150, 200)\n",
+      "Shape: (50, 50, 100)\n",
       "Data Type (dtype): float64\n",
-      "Size: 4500000\n"
+      "Size: 250000\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c346c8b5-6f10-49d3-954d-facb2cda9e09",
    "metadata": {},
    "outputs": [],
@@ -254,17 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3281789d-957a-43c5-922c-fb21882c5d1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = f['B0y'][:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ef0c1fdc-8a8d-4da6-819e-39cc176f0ea9",
    "metadata": {},
    "outputs": [
@@ -279,14 +269,15 @@
     }
    ],
    "source": [
-    "print(f\"Shape: {dataset.shape}\")  # Shape of the dataset (dimensions)\n",
-    "print(f\"Data Type (dtype): {dataset.dtype}\")  # Data type of the elements\n",
-    "print(f\"Size: {dataset.size}\")  # Total number of elements in the dataset"
+    "B_field_ds = E_f['B_abs'][:]\n",
+    "print(f\"Shape: {B_field_ds.shape}\")  # Shape of the dataset (dimensions)\n",
+    "print(f\"Data Type (dtype): {B_field_ds.dtype}\")  # Data type of the elements\n",
+    "print(f\"Size: {B_field_ds.size}\")  # Total number of elements in the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a047d95a-c72a-484b-88f6-3a34e14a26eb",
    "metadata": {},
    "outputs": [],
@@ -296,9 +287,9 @@
     "    x=X.flatten(),                 # X-coordinates\n",
     "    y=Y.flatten(),                 # Y-coordinates\n",
     "    z=Z.flatten(),                 # Z-coordinates\n",
-    "    value = dataset.flatten(),     # Flattened volume data\n",
+    "    value = B_field_ds.flatten(),     # Flattened volume data\n",
     "    isomin=0.2,                    # Minimum value to display\n",
-    "    isomax=np.max(dataset),        # Maximum value to display\n",
+    "    isomax=np.max(B_field_ds),        # Maximum value to display\n",
     "    opacity=0.3,                   # Adjust opacity (between 0 and 1) for better visualization\n",
     "    surface_count=10,              # Number of volume surfaces to display\n",
     "    colorscale='plasma',           # Choose a colorscale\n",
